// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<NewLineToBr /> NewLineToBr - default 1`] = `
<span>
  <span>
    one
  </span>
  <br />
  <span>
    two
  </span>
  <br />
  <span>
    three
  </span>
</span>
`;

exports[`<NewLineToBr /> NewLineToBr - no newline 1`] = `
<span>
  <span>
    one
  </span>
</span>
`;
